@@ -5,18 +5,29 @@
 use strict;
 use warnings;
 
-use Test::More tests => 7;
+use Test::More tests => 11;
 use ExtUtils::PkgConfig;
 
 $ENV{PKG_CONFIG_PATH} = './t/';
 
-my @cmds = qw(modversion libs cflags libs_only_L libs_only_l);
+my @cmds = qw(libs
+              modversion
+              cflags
+              cflags-only-I
+              cflags-only-other
+              libs-only-L
+              libs-only-l
+              libs-only-other);
 my $data;
 
 foreach my $cmd (@cmds) {
 	$data = ExtUtils::PkgConfig->$cmd(qw/test_glib-2.0/);
 	ok( defined $data );
 }
+
+# special case
+$data = ExtUtils::PkgConfig->static_libs(qw/test_glib-2.0/);
+like ($data, qr/pthread/);
 
 $data = ExtUtils::PkgConfig->variable(qw/test_glib-2.0/, 'glib_genmarshal');
 ok( defined $data );
