@@ -10,6 +10,7 @@ glib_mkenums=glib-mkenums
 Name: GLib
 Description: C Utility Library
 Version: 2.2.3
-Libs: -L${libdir} -lglib-2.0   
-Cflags: -I${includedir}/glib-2.0 -I${libdir}/glib-2.0/include 
+Libs: -L${libdir} -lglib-2.0
+Libs.private: -pthread
+Cflags: -I${includedir}/glib-2.0 -I${libdir}/glib-2.0/include
 
